@@ -31,7 +31,7 @@ load <- function (file, envir = parent.frame(), verbose = FALSE)
             ## a check while we still know the call to load()
             if(grepl("RD[ABX][12]\r", magic))
                 stop("input has been corrupted, with LF replaced by CR")
-            ## Not a version 2 magic number, so try the pre-R-1.4.0 code
+            ## Not a version 2 or 3 magic number, so try the pre-R-1.4.0 code
             warning(sprintf("file %s has magic number '%s'\n",
                             sQuote(basename(file)),
                             gsub("[\n\r]*", "", magic)),
